--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
+    "eslint": "./node_modules/eslint/bin/eslint.js ./src/**/**/*.js",
     "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
